<resources>
    <string name="app_name">Story App</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="loading">Loading…</string>
    <string name="posting">Posting…</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="create_an_account_description">Create an account to share your Story</string>
    <string name="invalid_credential">Email or password is incorrect</string>
    <string name="something_wrong">Something went wrong. Please try again later</string>
    <string name="empty">Empty Data</string>
    <string name="min_length_error">Must contain at least %1$d characters</string>
    <string name="max_length_error">Maximum is %1$d characters</string>
    <string name="minmax_length_error">Must contain at least %1$d characters, with a maximum of %2$d characters</string>
    <string name="invalid_emil_format">Invalid email format</string>
    <string name="required_field_message">This field is required</string>
    <string name="indonesia">Indonesia</string>
    <string name="registration_successful">Registration successful! Your account has been created.</string>
    <string name="image_story">Image Story</string>
    <string name="logout">Logout</string>
    <string name="posted_by">Posted by:</string>
    <string name="back">Back</string>
    <string name="location_with_pin">📍 %1$s</string>
    <string name="add_story">Add Story</string>
    <string name="select_or_take_picture">Select or Take\nPicture</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="enter_description">Enter Description</string>
    <string name="post_story">Post Story</string>
    <string name="permission_rationale">Enable access so you can start post story</string>
    <string name="no_image_selected">"Please take a picture or choose from the gallery"</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="refresh">Refresh</string>
    <string name="request_failed">Request Failed</string>
    <string name="include_location">Include Location</string>
    <string name="cannot_get_location">Cannot get location.</string>
</resources>
