<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.PostStoryActivity">

    <com.anandarh.storyapp.ui.components.BackButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/purple_500"
        android:background="@null"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_story"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toStartOf="parent"/>

    <FrameLayout
        android:id="@+id/frm_select"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="18dp"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/dotted_border">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/select_or_take_picture"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

    </FrameLayout>

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="18dp"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/frm_select"
        app:layout_constraintStart_toStartOf="parent"
        android:weightSum="2"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_camera"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:elevation="0dp"
            android:stateListAnimator="@null"
            android:layout_marginEnd="8dp"
            android:text="@string/camera"
            android:textColor="@color/white"
            android:gravity="center"
            app:iconGravity="textStart"
            android:paddingHorizontal="18dp"
            app:icon="@drawable/ic_baseline_camera"
            android:backgroundTint="@color/purple_200"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.rounded50"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_gallery"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:elevation="0dp"
            android:stateListAnimator="@null"
            android:layout_marginStart="8dp"
            android:text="@string/gallery"
            android:textColor="@color/white"
            android:gravity="center"
            app:iconGravity="textStart"
            android:paddingHorizontal="18dp"
            app:icon="@drawable/ic_baseline_image"
            android:backgroundTint="@color/purple_200"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.rounded50"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/ll_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="18dp"
            android:inputType="textMultiLine"
            android:hint="@string/enter_description"
            android:textSize="14sp"
            android:fontFamily="@font/roboto"
            android:minLines="3"
            android:maxLines="5"
            android:backgroundTint="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        android:text="@string/post_story"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background_button_semi_circular"/>

</androidx.constraintlayout.widget.ConstraintLayout>