<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ListStoryActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/sr_stories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_stories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="60dp" />


            <TextView
                android:id="@+id/ll_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/something_wrong"
                android:visibility="gone"
                app:drawableTint="@color/red"
                app:drawableTopCompat="@drawable/ic_baseline_error"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            app:fabCradleMargin="10dp"
            app:fabCradleRoundedCornerRadius="10dp"
            app:fabCradleVerticalOffset="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_button_semi_circular"
                android:drawableStart="@drawable/ic_baseline_logout"
                android:drawablePadding="5dp"
                android:drawableTint="@color/white"
                android:paddingHorizontal="16dp"
                android:stateListAnimator="@null"
                android:text="@string/logout"
                android:textColor="@color/white" />

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_add"
            app:layout_anchor="@id/bottom_app_bar"
            app:tint="@color/white" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/pirata_one"
        android:gravity="center_vertical"
        android:shadowColor="@color/purple_500"
        android:shadowDx="1.3"
        android:shadowDy="1.5"
        android:shadowRadius="1.5"
        android:text="@string/app_name"
        android:textColor="@color/purple_200"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/purple_200"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_map"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>